# study_ITK

./: CMakeLists.txt  FileIO.h  NiftiStateManager.hpp  PerformanceHelper.h  README.md  c_common.h  nifti_reader.hpp
base1/: main.cpp  print_nii.cpp  test_common.h  test_curvature_anisotropic.cpp  test_curvature_anisotropic_nifti.cpp  test_curvature_flow.cpp  test_curvature_preserve_edge.cpp  test_high_derivative.cpp  test_itk_to_vtk.cpp  test_med.cpp  test_med2.cpp  test_med_regi.cpp  test_multi_model_mutual_Info.cpp  test_multi_resotion.cpp  test_mutualinformation.cpp  test_regi_feature_points.cpp  test_regi_global_two_imgs.cpp  test_regi_landmarks.cpp  test_regi_mean_square.cpp  test_regi_vector_imgs.cpp  test_rgb_to_itk.cpp  test_rgb_to_vtk.cpp  test_rtk_entry.cpp  test_smoothing_binomial_blur.cpp  test_vtk_resample.cpp  test_vtk_smooth.cpp  test_vtk_smooth2.cpp  test_vtk_to_itk.cpp
med-common/: CMakeLists.txt
med-common/med/: ImageStateManager.hpp  MedFlow.cpp  MedFlow.hpp  MedFlow_ctx.h  MedFlow_pri.h  MedThyFilterManager.cpp  MedThyFilterManager.h  filter_impl.cpp  itk_impl.cpp  vtk_impl.cpp
med-common/med/test/: main.cpp  test.cpp  test.h
mesh-smoothing/: CMakeLists.txt
mesh-smoothing/triangle/: CurvatureFlow.hpp  HCLaplacian.hpp  Laplacian.hpp  Mesh.h  Smoothing.cpp  Smoothing.h  Taubin.hpp  Triangle.h  main.cpp
res/: test_smoothing.sh
res/itk_cmake/: CMakeLists.txt
study_VTK/: CMakeLists.txt
study_VTK/tests/: VTKFlow.cpp  VTKFlow.h  VTKFlow_ctx.h  VTKFlow_pri.h  gen_random_number.cpp  main.cpp  test_Cylinder.cpp  test_PerspectiveTransform.cpp
